<resources>
    <string name="app_name">Task > Consequence</string>

    <string name="name_hint">Name</string>
    <string name="severity_hint">Severity Level</string>
    <string name="description_hint">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reward_hint">Rewards</string>
    <string name="add_program">Add Program</string>
    <string name="number_of_periods_hint">Number of Periods</string>
    <string name="frequency_hint">Frequency</string>
    <string name="add_task">Add Task</string>
    <string name="start_date_hint">Start Date</string>
    <string name="small_punishment_hint">Small Punishment</string>
    <string name="big_punishment_hint">Big Punishment</string>
    <string name="time_hint">Start Time</string>
    <string name="create_task">Create Task</string>
    <string name="remove_task">remove</string>
    <string-array name="severity_levels">
        <item>Big</item>
        <item>Small</item>
    </string-array>
    <string-array name="frequencies">
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
    </string-array>
</resources>