<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"

            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/YourHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/severityInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/severity_hint"
            android:paddingBottom="10dp"
            app:boxBackgroundMode="outline">

            <AutoCompleteTextView
                android:id="@+id/severityDropdown"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="none"
                android:completionThreshold="0"
                android:paddingStart="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/severityInputLayout"-->
<!--            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->

<!--            android:hint="@string/severity_hint"-->
<!--            app:    ="outline"-->
<!--            app:errorEnabled="true"-->
<!--            app:hintTextAppearance="@style/YourHintTextAppearance"-->


<!--            >-->

<!--            <Spinner-->
<!--                android:id="@+id/severityDropdown"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="20sp"-->


<!--                />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/YourHintTextAppearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:lines="5" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel" />

    </LinearLayout>
</layout>
